# AudioWave

./: CMakeLists.txt  README.md
include/: AudioWave.h
src/: AudioWave.c  main.c
